[gd_scene load_steps=12 format=2]

[ext_resource path="res://game_assets/gui/window_2_border.png" type="Texture" id=1]
[ext_resource path="res://assets_OLD/fonts/Abel-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game_assets/fonts/Abel-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://game/ui/info_panel/InfoPanel.gd" type="Script" id=4]
[ext_resource path="res://game_assets/fonts/OpenSansCondensed-LightItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://game_assets/gui/close.png" type="Texture" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 143, 128 )
margin_left = 7.80353
margin_right = 6.67147
margin_top = 6.42319
margin_bottom = 6.03766

[sub_resource type="DynamicFont" id=2]
size = 40
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.407843, 0.309804, 0.137255, 1 )
draw_center = false
border_width_top = 2
border_color = Color( 0.556863, 0.435294, 0.109804, 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
use_filter = true
extra_spacing_char = 2
extra_spacing_space = -2
font_data = ExtResource( 5 )

[node name="InfoPanel" type="Node2D"]
position = Vector2( 0, 1.05264 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 4 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = -818.0
margin_top = 10.0
margin_right = -17.0
margin_bottom = 406.0
rect_min_size = Vector2( 500, 0 )
rect_pivot_offset = Vector2( 806.743, -183.894 )
size_flags_horizontal = 9
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Panel" parent="GridContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 362.0
margin_bottom = 92.0
grow_horizontal = 0
rect_min_size = Vector2( 20, 20 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="GridContainer"]
margin_left = 366.0
margin_right = 801.0
margin_bottom = 92.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 6.35783e-07 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="GridContainer/MarginContainer"]
margin_right = 435.0
margin_bottom = 92.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/MarginContainer"]
margin_right = 435.0
margin_bottom = 92.0
grow_horizontal = 0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 15
custom_constants/margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/MarginContainer/MarginContainer"]
margin_left = 15.0
margin_top = 10.0
margin_right = 425.0
margin_bottom = 82.0
grow_horizontal = 0
mouse_filter = 2
custom_constants/margin_left = 390
custom_constants/margin_bottom = 0

[node name="TextureButton" type="TextureButton" parent="GridContainer/MarginContainer/MarginContainer/MarginContainer"]
modulate = Color( 0.407843, 0.309804, 0.137255, 1 )
margin_left = 390.0
margin_right = 410.0
margin_bottom = 72.0
rect_min_size = Vector2( 20, 0 )
rect_pivot_offset = Vector2( -595.07, 328.265 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/MarginContainer/MarginContainer"]
margin_left = 15.0
margin_top = 10.0
margin_right = 425.0
margin_bottom = 82.0
mouse_filter = 2
custom_constants/separation = 0

[node name="HeaderBox" type="VBoxContainer" parent="GridContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 410.0
margin_bottom = 72.0
mouse_filter = 2
custom_constants/separation = -19

[node name="Name" type="Label" parent="GridContainer/MarginContainer/MarginContainer/VBoxContainer/HeaderBox"]
margin_bottom = 52.0
rect_pivot_offset = Vector2( 40, 29.1345 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )

[node name="Category" type="Label" parent="GridContainer/MarginContainer/MarginContainer/VBoxContainer/HeaderBox"]
margin_top = 33.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 40, 29.1345 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.392157, 0.501961, 1, 1 )

[node name="DescriptionContainer" type="PanelContainer" parent="GridContainer/MarginContainer/MarginContainer/VBoxContainer"]
visible = false
margin_right = 410.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 2
custom_styles/panel = SubResource( 4 )

[node name="Description" type="Label" parent="GridContainer/MarginContainer/MarginContainer/VBoxContainer/DescriptionContainer"]
visible = false
margin_top = 6.0
margin_right = 410.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.890196, 0.796078, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="GridContainer/MarginContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 60.0
margin_right = 410.0
margin_bottom = 60.0
custom_constants/hseparation = 40
columns = 3

[node name="ActionPanelContainer" type="VBoxContainer" parent="GridContainer/MarginContainer/MarginContainer/VBoxContainer"]
visible = false
margin_right = 410.0
[connection signal="pressed" from="GridContainer/MarginContainer/MarginContainer/MarginContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
